# praeparo

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
docs/: agents.md  index.md  visual_model_architecture.md  visual_pipeline_engine.md
docs/datasources/: index.md
docs/epics/: context_layers.md  index.md  metric_explain_and_bindings.md  metric_expression_min_max.md  metric_expression_ratio_to.md
docs/metrics/: index.md  (+5 more)
praeparo/: __init__.py  cli.py  data.py  datasources.py  dax.py  env.py  inheritance.py  mcp_server.py  plugin_bootstrap.py  powerbi.py  rendering.py  review_profiles.py  schema.py  templating.py  utils.py
schemas/: components.json  context_layer.json  matrix.json  metrics.json  pack.json  visual_umbrella.schema.json
tests/: snapshot_extensions.py  test_cartesian_models.py  test_cartesian_pipeline.py  test_cartesian_planner.py  test_chart_data.py  test_cli_entrypoint.py  test_cli_logging.py  test_dataset_context_discovery.py  test_datasources.py  test_dax.py  test_env_loader.py  test_expression_eval.py  test_matrix_planner_dax_artifacts.py  test_mcp_server.py  test_metric_dataset_builder.py  test_metric_dataset_builder_ratio_to.py  test_metric_dataset_builder_snapshots.py  test_metrics_catalog.py  test_metrics_extends.py  test_metrics_models.py  test_metrics_root_defaults.py  test_pipeline.py  test_plugin_bootstrap.py  test_powerbi.py  test_powerbi_export_to_file.py  test_powerbi_normalisation.py  test_powerbi_pptx_extraction.py  test_python_visual_cli.py  test_schema.py  test_templating.py  test_yaml_loader.py
(+304 files in other folders)
