[project]
name = "praeparo"
version = "0.1.0"
description = ""
authors = [
    {name = "Maitland Marshall",email = "maitland@mait.dev"}
]
readme = "README.md"
requires-python = "~3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"

