[project]
name = "praeparo"
version = "0.1.0"
description = ""
authors = [
    {name = "Maitland Marshall",email = "maitland@mait.dev"}
]
readme = "README.md"
requires-python = "~3.11"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "kaleido (>=1.1.0,<2.0.0)",
    "httpx (>=0.27.0,<0.28.0)",
]

[project.scripts]
praeparo = "praeparo.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
syrupy = "^4.9.1"
pytest-dotenv = "^0.5.2"

